--- a/src/components/layout/Navbar.module.scss
+++ b/src/components/layout/Navbar.module.scss
@@ -1,24 +1,24 @@
 .navbar {
-    background-color: #222;
-    padding: 1em;
+  background-color: #222;
+  padding: 1em;
 }
 
 .list {
-    display: flex;
-    list-style: none;
-    align-items: center;
+  display: flex;
+  list-style: none;
+  align-items: center;
 }
 
 .item {
-    margin-right: 1em;
+  margin-right: 1em;
 }
 
 .item a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .item a:hover {
-    color: #FFBB33;
-    transition: ease 0.5s;
+  color: #ffbb33;
+  transition: ease 0.5s;
 }
