--- a/src/components/pages/Home.module.scss
+++ b/src/components/pages/Home.module.scss
@@ -1,4 +1,4 @@
-$yellow-main: #ffbb33;
+@use "../../styles/variables";
 
 .home_container {
   width: 100%;
@@ -15,15 +15,15 @@ $yellow-main: #ffbb33;
 }
 
 .home_container h1 span {
-  color: $yellow-main;
+  color: variables.$yellow-main;
   padding: 0 0.2em;
-  background-color: #222;
+  background-color: variables.$bg-color;
   border-radius: 0.5em;
 }
 
 .home_container p {
   margin-bottom: 1.5em;
-  color: #7b7b7b;
+  color: variables.$gray;
 }
 
 .home_container img {
