--- a/src/components/pages/NewProject.module.scss
+++ b/src/components/pages/NewProject.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/variables';
+
 .newproject_container {
   width: 450px;
   margin: 0 auto;
@@ -9,5 +11,5 @@
 }
 
 .newproject_container p {
-  color: #7b7b7b;
+  color: variables.$gray;
 }
