--- a/src/form/Input.module.scss
+++ b/src/form/Input.module.scss
@@ -1,3 +1,5 @@
+@use "../styles/variables";
+
 .form_control {
   display: flex;
   flex-direction: column;
@@ -16,5 +18,5 @@
 }
 
 .form_control input::placeholder {
-  color: #7b7b7b;
+  color: variables.$gray;
 }
