--- a/src/components/layout/Loading.module.scss
+++ b/src/components/layout/Loading.module.scss
@@ -1,11 +1,11 @@
-.loader_container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .loader {
   width: 50px;
+
+  &_container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
