--- a/src/components/pages/Home.module.scss
+++ b/src/components/pages/Home.module.scss
@@ -1,12 +1,11 @@
 @use "../../styles/variables";
+@use "../../styles/mixins";
 
 .home_container {
   width: 100%;
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   padding: 4em;
+  @include mixins.flex-center
 }
 
 .home_container h1 {
